# ADAPT

./: README.md  pyproject.toml
config/: .gitignore
src/project/: __init__.py  run.py  settings.py
