[project]
name = ""
description = ""
dynamic = ["version"]
requires-python = ">= 3.11"
dependencies = ["omegaconf>=2.3.0"]
authors = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/__version__.py"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src/**"]

[tool.hatch.build.targets.editable]
mode = "compat"
